# FrontMatter

./: .env.example  .gitignore  FrontMatter.md  Makefile  README.md  README.zh-CN.md  docker-compose.portable.yml  docker-compose.yml  leaselensAI.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260527_01_add_outcome_calibration.py
backend/src/: app_factory.py  bootstrap_database.py
backend/src/agents/: __init__.py  base.py  competition.py  finance.py  spatial.py  strategy.py
backend/src/api/: deps.py  router.py
backend/src/config/: __init__.py  constants.py  settings.py
backend/src/data/: public_benchmark_snapshot.json
backend/src/exceptions/: __init__.py  agent.py  analysis.py  base.py  streaming.py
backend/src/middleware/: cors.py  error_handler.py
backend/src/pipeline/: __init__.py  orchestrator.py  stream.py
backend/src/repositories/: __init__.py  analysis.py  base.py  outcome.py  report.py
backend/src/services/: __init__.py  analysis.py  benchmarks.py  calibration.py  candidate_comparison.py  economics.py  geo.py  llm.py  scoring.py  singapore.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_spatial.py
backend/tests/test_api/: test_analyze.py  test_auth.py  test_calibration.py  test_health.py  test_locations.py
backend/tests/test_config/: test_settings.py
backend/tests/test_pipeline/: test_orchestrator.py
backend/tests/test_services/: test_benchmarks.py  test_calibration.py  test_candidate_comparison.py  test_economics.py  test_geo.py  (+2 more)
(+94 files in other folders)
